--- a/static/style.css
+++ b/static/style.css
@@ -6,17 +6,9 @@ body{
     font-family: Helvetica, Arial, sans-serif;
 }
 
-#image1{
+.illustrtion{
     position: relative;
     left:0px;
-    width:64px;
-    height:64px;
-
-}
-
-#image2{
-    position: relative;
-    left:25px;
     width:64px;
     height:64px;
 
@@ -56,4 +48,37 @@ footer{
     background-color: #f8f9fa;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    }
+nav li {
+    float: left;
+    }
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none;
+    }
+nav li a:hover {
+    background-color: #111;
+    }
 
+.float-right {
+    float: right;
+    }
+.imdb {
+    font-size: 12px;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    background: #F5C518;
+    border-radius: 5px;
+    padding: 3px 5px;
+    }
+        
