--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-    <!-- 主页模板 -->
-<head>
-    <meta charset="UTF-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    <link rel="icon" class = "favicon" href="{{ url_for('static', filename = 'favicon.jpg')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css')}}", type="text/css">
-</head>
-<body>
-    <h2>
-        <img src="{{ url_for('static', filename='images/dog-cat.jpg')}}" id="image1" alt="猫&狗">
-        {{ user.name }}'s Watchlist
-    </h2>
-    {# 使用 length 过滤器获取 movie 变量的长度 #}
+{% extends 'base.html' %}
+
+{% block content %}
     <p>{{ movies|length}} Titles</p>
 
     <ul class = "movie-list">
         {% for movie in movies%} {# 迭代 movies 变量 #}
-        <li>{{movie.title}} - {{ movie.year}}</li>  {# 等同于movie['title'] #}
+        <li>{{movie.title}} - {{ movie.year}}
+            <span class = "font-right">
+                <a href="https://www.imdb.com/find?q={{ movie.title }}" class="imdb" target="_blank" title="Find this movie on IMDb">IMDb</a>
+            </span>
+        </li>  {# 等同于movie['title'] #}
         {% endfor %} {# 使用 endfor 标签结束 for 语句 #}
     </ul>
 
-    <img src="{{ url_for('static', filename='images/girls1.jpg')}}" id ="image2" alt="a girl">
-  
-    
-    <footer>
-        <small>&copy; 2018 <a href="http://helloflask.com/tutorial">HelloFlask</a></small>
-    </footer>
-</body>
-</html>
+<ul>
+    <img src="{{url_for('static', filename = 'images/girls2.jpg')}}" class='illustrtion' alt="a girl" title="what a pretty girl">
+</ul>
+{% endblock %}
