--- a/static/style.css
+++ b/static/style.css
@@ -55,9 +55,11 @@ nav ul {
     overflow: hidden;
     background-color: #333;
     }
+
 nav li {
     float: left;
     }
+
 nav li a {
     display: block;
     color: white;
@@ -65,6 +67,7 @@ nav li a {
     padding: 8px 12px;
     text-decoration: none;
     }
+
 nav li a:hover {
     background-color: #111;
     }
@@ -72,6 +75,7 @@ nav li a:hover {
 .float-right {
     float: right;
     }
+
 .imdb {
     font-size: 12px;
     font-weight: bold;
@@ -80,5 +84,54 @@ nav li a:hover {
     background: #F5C518;
     border-radius: 5px;
     padding: 3px 5px;
+    border: 1px solid  #F5C518;
+    /* 加一个边框，让它和“EDIT”和“DELETE”一个大小 */
+    }
+
+input[type='submit']{
+    font-family: inherit;
+
+}
+
+input[type='text']{
+    border: 1px solid #ddd
+}
+
+input[name='year']{
+    width: 50px;
+}
+
+.btn{
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 0px 5px;
+    text-decoration: none;
+    cursor :pointer;
+    background-color: white;
+    color: black;
+    border: 1px solid #555555;
+    border-radius: 5px;
+}
+
+.btn:hover{
+    text-decoration: none;
+    background-color: balck;
+    border: 1px solid balck;
+    color: white;
+}
+
+.alert {
+    position: relative;
+    padding: 7px;
+    margin: 7px 0;
+    border: 1px solid transparent;
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+    border-radius: 5px;
+    }
+
+.inline-form	{
+    display:	inline;
     }
         
