--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <p>{{ movies|length}} Titles</p>
+    {% if current_user.is_authenticated %}
     <form method="post">
         Name <input type="text" name="title" autocomplete="off" requ
         ired>
@@ -9,6 +10,7 @@
         red>
         <input class="btn" type="submit" name="submit" value="Add">
     </form>
+    {% endif %}
 
       
     <ul class = "movie-list">
@@ -16,16 +18,12 @@
         <li>{{movie.title}} - {{ movie.year}}
             
             <span class="float-right">
+                {% if current_user.is_authenticated %}
                 <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
-            
-
-            
                 <form class="inline-form"	method="post"	action="{{	url_for('delete',	movie_id=movie.id)	}}">
                 <input class="btn"	type="submit"	name="delete"	value="Delete"	onclick="return	confirm('Are you sure?')">
-            </form>
-            
-
-            
+                </form>
+                {% endif %}
                 <a href="https://www.imdb.com/find?q={{ movie.title }}" class="imdb" target="_blank" title="Find this movie on IMDb">IMDb</a>
             </span>
         </li>  {# 等同于movie['title'] #}
