--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <ul class="movie_list">
-    <li><span class="float_right"><a href="{{ url_for('index')}}">Go Back</a>
+    <li>
+        Page Not Found - 404
+        <span class="float_right">
+            <a href="{{ url_for('index')}}">Go Back</a>
     </span>
 </li>
 </ul>
