--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3>Setting</h3>
+<h3>Settings</h3>
 <form method="post">
     Your Name <input type="text" name="name" autocomplete="off" required value="{{ current_user.name }}">
     <input type="submit" class="btn" name="submit" value="Save">
